[gd_scene load_steps=9 format=3 uid="uid://dibraxbwe0ywl"]

[ext_resource type="Script" path="res://Scenes/Menus/SettingsMenu/setting_menu.gd" id="1_5lpq1"]
[ext_resource type="FontFile" uid="uid://duosha27byva" path="res://assets/Fonts/GohuFont14NerdFontPropo-Regular.ttf" id="1_6c1rl"]
[ext_resource type="Texture2D" uid="uid://cnl5irukhvfhh" path="res://assets/Sprites/Menu/MenuCheckbox/checkbox_normal.png" id="2_qjyvu"]
[ext_resource type="Texture2D" uid="uid://nao2rcwarjya" path="res://assets/Sprites/Menu/MenuCheckbox/checkbox_pressed.png" id="3_8pc8l"]
[ext_resource type="Texture2D" uid="uid://dru6yev0lwi1h" path="res://assets/Sprites/Menu/MenuCheckbox/checkbox_hover.png" id="4_n65y1"]
[ext_resource type="Texture2D" uid="uid://bdkj8aed44hgy" path="res://assets/Sprites/Menu/MenuButtons/menubutton_normal.png" id="5_k70kp"]
[ext_resource type="Texture2D" uid="uid://cwe5bchyn3b2d" path="res://assets/Sprites/Menu/MenuButtons/menubutton_pressed.png" id="6_o6dpb"]
[ext_resource type="Texture2D" uid="uid://bj0ku5i48lnyq" path="res://assets/Sprites/Menu/MenuButtons/menubutton_focus.png" id="7_8brk8"]

[node name="setting_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lpq1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 32
text = "-SETTINGS-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 486.0
offset_top = 141.0
offset_right = 502.0
offset_bottom = 157.0
texture_normal = ExtResource("2_qjyvu")
texture_pressed = ExtResource("3_8pc8l")
texture_hover = ExtResource("4_n65y1")

[node name="Label" type="Label" parent="FullScreenButton"]
layout_mode = 0
offset_left = 28.0
offset_top = -7.0
offset_right = 178.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 26
text = "FULLSCREEN"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 313.0
offset_right = 733.0
offset_bottom = 348.0

[node name="Label" type="Label" parent="MasterVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 7.0
offset_right = 386.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "9"
vertical_alignment = 1

[node name="MasterLabel" type="Label" parent="MasterVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = -97.0
offset_top = 7.0
offset_right = -28.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "Voices"
vertical_alignment = 1

[node name="EffectsVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 278.0
offset_right = 733.0
offset_bottom = 313.0

[node name="EffectsLabel" type="Label" parent="EffectsVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = -97.0
offset_top = 7.0
offset_right = -17.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "Effects
"
vertical_alignment = 1

[node name="Label" type="Label" parent="EffectsVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 7.0
offset_right = 386.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "9"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 243.0
offset_right = 733.0
offset_bottom = 278.0

[node name="MusicLabel" type="Label" parent="MusicVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = -97.0
offset_top = 7.0
offset_right = -39.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "Music"
vertical_alignment = 1

[node name="Label" type="Label" parent="MusicVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 7.0
offset_right = 386.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "9"
vertical_alignment = 1

[node name="VoicesVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 208.0
offset_right = 733.0
offset_bottom = 243.0

[node name="VoicesLabel" type="Label" parent="VoicesVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = -97.0
offset_top = 7.0
offset_right = -28.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "Master"
vertical_alignment = 1

[node name="Label" type="Label" parent="VoicesVolumeSlider"]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 7.0
offset_right = 386.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 20
text = "9"
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 516.0
offset_top = 391.0
offset_right = 644.0
offset_bottom = 431.0
texture_normal = ExtResource("5_k70kp")
texture_pressed = ExtResource("6_o6dpb")
texture_hover = ExtResource("7_8brk8")

[node name="Label" type="Label" parent="BackButton"]
texture_filter = 1
layout_mode = 0
offset_right = 128.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_6c1rl")
theme_override_font_sizes/font_size = 18
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="FullScreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VoicesVolumeSlider" to="." method="_on_voices_volume_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
